# anyfold

./: .gitignore  CMakeLists.txt  CTestLists.txt  FindOpenCL.cmake
benchmarks/: benchmarks.cpp  measureTime.hpp
include/: CMakeLists.txt  anyfold.hpp  image_stack_utils.h
include/gpu/: convolution3DCL.hpp  convolve.hpp
include/opencl/: convolution3DCL.hpp  convolve.hpp  convolve_kernel_simple.cl  opencl_utils.hpp
src/: CMakeLists.txt
src/gpu/: convolution3DCL.cpp  convolution3d.cl
src/opencl/: convolution3DCL.cpp  convolution3DCLBuffer.cpp  convolution3DCLBufferLocalMem.cpp  convolution3DCLImage.cpp  convolution3DCLImageLocalMem.cpp  convolution3d.cl
tests/: CMakeLists.txt  test_cpu_convolve.cpp  test_fixtures.hpp  test_fixtures_asym.hpp  test_gpu_convolve.cpp  test_opencl_convolve.cpp
