# include directories
# src directory
INCLUDE_DIRECTORIES(.)

if(BUILD_OPENCL_ANYFOLD)
  add_definitions( -DHAS_OPENCL )
endif(BUILD_OPENCL_ANYFOLD)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/inc/anyfold.cuh") 
INSTALL(TARGETS ${PROJECT_NAME}
  EXPORT anyfold-targets 
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)



